# asset-allocation

./: .env.example  .gitignore  CLAUDE.md  HERMES_TRACKING.md  LICENSE  MODEL_DOCUMENTATION.md  PROJECT_SCOPE.md  README.md  SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  cma.yaml  pe_pacing.yaml  public_allocation.yaml  scenarios.yaml  spending.yaml
data/fixtures/scenarios/: base.yaml  drawdown.yaml
docs/: phase_14_workbook_crosswalk_workflow.md  phase_19_1_design_lock.md  phase_23_design_lock.md  sweep_lambda_calibration_2026_05_02.md
scripts/: consolidation_probe_p3.py  run_sfo_study.py  sweep_lambda_calibration.py
src/aa_model/: __init__.py
src/aa_model/allocation/: cvxportfolio_adapter.py  liquidity_overlay.py  riskfolio_adapter.py
src/aa_model/assumptions/: cma.py  correlation_shock.py  scenario_builder.py
src/aa_model/cli/: main.py
src/aa_model/implementation/: base.py  stub.py  (+2 more)
tests/: conftest.py  generate_ta_golden.py  test_cma_loader.py  test_correlation_shock.py  test_cost_aware_allocator.py  test_cvxportfolio_adapter.py  test_ledger.py  test_liquidity.py  test_liquidity_overlay.py  test_manifest.py  test_orchestrator.py  test_owl_adapter.py  test_owl_scale_invariance.py  test_pe_adapter_stairs.py  test_pe_metadata.py  test_pe_ta.py  test_phase125_distributable_income.py  test_phase12_spending_base.py  test_phase13_distribution_producer.py  test_phase143_row_scope.py  test_phase14_1_layout_discovery.py  test_phase14_2_discovery.py  test_phase14_workbook_ingestion.py  test_phase15_position_ingestion.py  test_phase16_liquidity_coverage.py  test_phase17_study_integration.py  test_phase18_spending_base_bridge.py  test_phase19_pe_call_obligation.py  test_phase20_pe_call_reconciliation.py  test_phase21_reconciliation_gates.py  test_review_fixes_2026_05_05.py  test_riskfolio_adapter.py  test_scenario_builder.py  test_spending_rules.py  test_sweep.py  test_transaction_cost_summary.py
tests/golden/: ta_single_fund.csv
(+31 files in other folders)
