[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aa_model"
version = "0.1.0"
description = "SFO asset allocation study model"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pydantic==2.7.1",
  "pyyaml==6.0.1",
  "pyarrow==15.0.2",
  "jinja2==3.1.4",
]

[project.scripts]
aa-model = "aa_model.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
