[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aa_model"
version = "0.1.0"
description = "SFO asset allocation study model"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0,<3",
  "pandas==2.2.2",
  "pydantic==2.7.1",
  "pyyaml==6.0.1",
  "pyarrow>=17,<24",
  "jinja2==3.1.4",
]

[project.optional-dependencies]
# Phase 3a opt-in: riskfolio adapter (allocation.engine = "riskfolio").
# Heavy install (~80 transitive deps including matplotlib, numba, statsmodels,
# vectorbt, ipywidgets) — keep out of the core install set.
riskfolio = ["riskfolio-lib==7.2.1"]
# Phase 3b opt-in: cvxportfolio adapter (implementation.engine = "cvxportfolio").
# Pure-Python on top of cvxpy; ~5 small extra deps. Light install if
# cvxpy is already present (riskfolio already pulls it in).
cvxportfolio = ["cvxportfolio==1.5.1"]

[project.scripts]
aa-model = "aa_model.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
